syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
package com.sergeyvolkodav.grpc.proto.feed;


enum Status {
    STATUS_UNKNOWN = 0;
    OPEN = 1;
    CLOSE = 2;
    IN_PLAY = 3;
}

enum MessageType {
    MESSAGE_TYPE_UNKNOWN = 0;
    MASTER = 1;
    EVENT_UPDATE = 2;
    PRICE_UPDATE = 3;
}

enum MarketType {
    MARKET_TYPE_UNKNOWN = 0;
    MONEY_LINE = 1;
}


enum OddsType {
    ODDS_UNKNOWN = 0;
    DECIMAL = 1;
}

enum Currency {
    CURRENCY_UNKNOWN = 0;
    USD = 1;
    EUR = 2;
    GBP = 3;
}

message EventRequest {
    repeated int64 sportId = 1;
}

message Envelope {
    MessageType type = 1;
    oneof EventType {
        Event event = 2;
        Price price = 3;
    }
}

message Event {
    int64 id = 1;
    string name = 2;
    int64 sportId = 3;
    string country = 4;
    string competition = 5;
    string location = 6;
    google.protobuf.Timestamp startTime = 7;
    bool inRunning = 8;
    Status status = 9;
    repeated Market markets = 10;
}

message Market {
    int64 id = 1;
    MarketType type = 2;
    Status status = 3;
    int32 handicap = 4;
    string name = 5;
    repeated Runner runners = 6;
}

message Runner {
    int64 id = 1;
    string name = 2;
    Status status = 3;
    int32 handicap = 4;
    Price price = 5;
}

message Price {
    int64 runnerId = 1;
    Odds odds = 2;
}


message Stake {
    Currency currency = 1;
    string amount = 2;
}

message Odds {
    OddsType type = 1;
    string value = 2;
}

message BetRequest {
    string guid = 1;
    int64 runnerId = 2;
    google.protobuf.Timestamp betTime = 3;
    Odds odds = 4;
    int64 externalBetId = 5;
    int64 externalAccountId = 6;
    Stake stake = 7;
}

message BetResponse {
    int64 runnerId = 1;
    google.protobuf.Timestamp betTime = 2;
    Odds odds = 3;
    Stake stake = 4;
}


service EventService {
    rpc observeEvents (EventRequest) returns (stream Envelope);
}


service BetsService {
    rpc submitBet (BetRequest) returns (BetResponse);
}
